rev 49 (2016-10-02)
- in display.php, you can now specify (via URL parameter dev=dev) if you want to use the core database of the development calculator, rather than the public version (default)
- credentials for accessing the API of the dev calc added to config.php
- now can add nationally submitted BAUs to the pledge
- API URL is now part of the configuation file config.php
- FIXED: the calculator API is now called via https
- FIXED: passing empty URL parameters for download script doesn't break download anymore

rev 48 (2015-08-27)
- new default method for pledge decomposition applied to download/display.php: source categories included in a pledge will be split according
  to their ratio in the BAU of the target year; non-included sources will be held at absolute Mt BAU levels.
- display.php now supports the 'public' URL parameter to filter based on that value
- display.php, when downloading (dl=1) the pledge table as xls, the filename for the download can now be specified via "filname=" URL parameter
- FIXED: display.php sent a nonsensical content-length header for Excel download, breaking the download in certain circumstances
- if the core database name that was stored in a cookie (for reuse purposes) doesn't exist anymore, get a new one from the calc-engine

rev 47 (2015-08-17)
- when displaying or exporting (display.php) the pledge db, the pledge is now converted into Mt, and the source break down provided in Mt 
  as per data provided in pledge or default method (BAU composition in pledge year) (all based on downloads from core database)
- display.php now looks better (styled table and floating table header)
- moved common functions for accessing core database via calculator API to api_functions.php
- the (core) database name (for time series and regions lookup) is now stored in a cookie for cross-session re-use
- improved description text for pledge breakdown in entry form
- removed depreciated "link to information" field from entry form and pledge table